--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,9 @@ verify_ssl = true
 django = "~=3.1.0"
 django-extensions = "*"
 django-environ = "*"
+djangorestframework = "*"
 psycopg2 = "*"
 
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
