WIP: startedg implementing github spider

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ django-extensions = "*"
 django-environ = "*"
 djangorestframework = "*"
 psycopg2 = "*"
+pytest = "*"
+pytest-django = "*"
 
 
 [requires]
